scribble-test/src/test/resources/bad/safety/stuckmsg/threeparty/Test02.scr
module bad.safety.stuckmsg.threeparty.Test02;


global protocol Proto1(role A, role B, role C)
{
	rec X
	{
		choice at A
		{
			1() from A to B;
			3() from A to C;
			continue X;
		}
		or
		{
			1() from A to B;
			2() from A to B;
			4() from A to C;
		}
	}
}


